--- a/front/src/assets/css/main.css
+++ b/front/src/assets/css/main.css
@@ -1,3 +1,27 @@
 .portafolio-title {
     text-align: center;
 }
+
+.texto-informacion {
+    margin-top: 15px;
+    color: grey;
+}
+
+.riesgo-numero {
+    margin-top: 15px;
+    color: black;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.botones-accion {
+    display: flex;
+    justify-content: space-around;
+}
+
+.propiedad-detalle {
+    font-weight: bold;
+    font-size: 15px;
+}
