--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.portafolio-title {
+  text-align: center;
+}
+
+.texto-informacion {
+  margin-top: 15px;
+  color: grey;
+}
+
+.riesgo-numero {
+  margin-top: 15px;
+  color: black;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.botones-accion {
+  display: flex;
+  justify-content: space-around;
+}
+
+.propiedad-detalle {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.wrapper-boton-crear-proyecto {
+  margin: 20px;
+}
